--- a/src/App.css
+++ b/src/App.css
@@ -48,8 +48,8 @@
 	 box-sizing: border-box;
 }
  .box {
-	 width: 350px;
-	 height: 42%;
+	 width: 450px;
+	 height: 50%;
 	 max-height: 600px;
 	 min-height: 350px;
 	 /* background: #332f63; */
@@ -309,6 +309,73 @@
 .box .box__description .box__button:hover:before {
   transform: translateX(250px) rotate(45deg);
 }
+
+.clock__dot{
+  animation: ticking 1s ease-in-out 0s infinite;
+}
+
+.notification__alert{
+ animation: alerting 3s ease-in-out 0s infinite; 
+}
+
+.bell__icon:hover {
+  animation: ring 4s ease-in-out 0s infinite;
+}
+
+@keyframes ring {
+  0% { transform: rotate(0); }
+  1% { transform: rotate(30deg); }
+  3% { transform: rotate(-28deg); }
+  5% { transform: rotate(34deg); }
+  7% { transform: rotate(-32deg); }
+  9% { transform: rotate(30deg); }
+  11% { transform: rotate(-28deg); }
+  13% { transform: rotate(26deg); }
+  15% { transform: rotate(-24deg); }
+  17% { transform: rotate(22deg); }
+  19% { transform: rotate(-20deg); }
+  21% { transform: rotate(18deg); }
+  23% { transform: rotate(-16deg); }
+  25% { transform: rotate(14deg); }
+  27% { transform: rotate(-12deg); }
+  29% { transform: rotate(10deg); }
+  31% { transform: rotate(-8deg); }
+  33% { transform: rotate(6deg); }
+  35% { transform: rotate(-4deg); }
+  37% { transform: rotate(2deg); }
+  39% { transform: rotate(-1deg); }
+  41% { transform: rotate(1deg); }
+
+  43% { transform: rotate(0); }
+  100% { transform: rotate(0); }
+}
+
+@keyframes alerting{
+  0% {
+    opacity: 1;
+ }
+  25% {
+    opacity: 0.1;
+ }
+  50% {
+    opacity: 1;
+ }
+  100% {
+    opacity: 1;
+ }
+}
+
+ @keyframes ticking {
+   0%{
+     opacity: 1;
+   }
+   50%{
+     opacity: 0.2;
+   }
+   100%{
+     opacity: 1;
+   }
+ }
 
  @keyframes upndown {
 	 0% {
